# my-todo-app-in-a-lambda

./: .gitignore
cdk/: .env.example  package-lock.json  package.json
cdk/lib/config/environments/: dev.ts  index.ts  prod.ts
cdk/lib/constructs/lambda/: go-lambda-function-builder.ts  lambda-function-builder.base.ts  nodejs-lambda-function-builder.ts  rust-lambda-function-builder.ts
cdk/lib/stacks/agro/: index.ts
cdk/lib/types/: environment.ts
cdk/lib/utils/: constants.ts
src/: Cargo.toml  bacon.toml
