[workspace]
resolver = "3"
members = ["packages/*"]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Luis Carlos Osorio Jayk <luiscarlosjayk@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "bytes", "fs", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
itertools = "0.14.0"
async-trait = "0.1.72"
mime = "0.3.17"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.0"
serde_repr = "0.1"
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.103.0"
maud = { version = "0.27.0", features = ["actix-web"] }
chrono = { version = "0.4.42", features = ["serde"] }
actix-web = { version = "4.12.1" }
actix-files = "0.6.9"
tracing-actix-web = { version = "0.7.20", features = ["uuid_v7"] }
bytes = "1.1.0"
